fix: add random key generation instead of static key

--- a/docs/index.ipynb
+++ b/docs/index.ipynb
@@ -38,7 +38,7 @@
    },
    "source": [
     "# Opis algorytmu Blowfish\n",
-    "Blowfish to symetryczny algorytm szyfrowania blokowego zaprojektowany przez Bruce’a Schneiera w 1993 roku. Powstał jako szybka i bezpłatna alternatywa dla istniejących w tym czasie algorytmów. Na jego bazie powstała jedna z najbardziej powszechnie używanych funkcji do hashowania haseł - `bcrypt`, autorstwa Nielsa Provosa i Davida Mazièresa, zaprezentowana na konferencji USENIX w 1999 roku \\cite{provos1999future}.\n",
+    "Blowfish to symetryczny algorytm szyfrowania blokowego zaprojektowany przez Bruce’a Schneiera w 1993 roku. Powstał jako szybka i bezpłatna alternatywa dla istniejących w tym czasie algorytmów. Bazuje on na strukturze stosowanej w budowie symetrycznych algorytmów szyfrujących - sieci Feistela. Na jego bazie powstała jedna z najbardziej powszechnie używanych funkcji do hashowania haseł - `bcrypt`, autorstwa Nielsa Provosa i Davida Mazièresa, zaprezentowana na konferencji USENIX w 1999 roku \\cite{provos1999future}.\n",
     "\n",
     "## Parametry:\n",
     "- Długość bloku: 64 bity (8 bajtów)\n",
@@ -155,7 +155,7 @@
     "\n",
     "## Plik `core.py`\n",
     "\n",
-    "W tym pliku znajduje się rdzeń modułu - implementacja algorytmu szyfrującego Blowfish - funkcja `F` oraz funkcje szyfrujące bloki `L` i `R` - `encrypt_block` oraz `decrypt_block`"
+    "W tym pliku znajduje się rdzeń modułu - implementacja algorytmu szyfrującego Blowfish - funkcja `F` oraz funkcje szyfrujące bloki `L` i `R` - `encrypt_block` oraz `decrypt_block`. Dodatkowo mamy tutaj funkcje do zarządzania używanymi kluczami - `generate_keys`, `save_keys` oraz `load_keys`. Ze względu na generacje kluczy jako int32 zamiast wartości heksadecymalnej, musimy pamiętać o maskowaniu przypisywanej wartości w funkcjach szyfrujących / deszyfrujących bloki."
    ]
   },
   {
@@ -164,34 +164,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import secrets\n",
+    "import json\n",
+    "import os\n",
+    "\n",
+    "# Default keys for simplified Blowfish algorithm\n",
     "P_ARRAY = [0x243F6A88, 0x85A308D3] + [0] * 16\n",
     "S_BOXES = [[i for i in range(256)] for _ in range(4)]\n",
+    "\n",
+    "# Generation of random keys for Blowfish - int32 arrays\n",
+    "# Since keys are 32 bit integers, we need to mask values to 32 bits during encryption/decryption\n",
+    "def generate_keys():\n",
+    "    global P_ARRAY, S_BOXES\n",
+    "    P_ARRAY = [secrets.randbits(32) for _ in range(18)]\n",
+    "    S_BOXES = [[secrets.randbits(32) for _ in range(256)] for _ in range(4)]\n",
+    "\n",
+    "def save_keys(filename=\"blowfish_keys.json\"):\n",
+    "    keys = {\n",
+    "        \"P_ARRAY\": P_ARRAY,\n",
+    "        \"S_BOXES\": S_BOXES\n",
+    "    }\n",
+    "    with open(filename, \"w\") as f:\n",
+    "        json.dump(keys, f)\n",
+    "\n",
+    "def load_keys(filename=\"blowfish_keys.json\"):\n",
+    "    global P_ARRAY, S_BOXES\n",
+    "    if not os.path.exists(filename):\n",
+    "        raise FileNotFoundError(f\"Key file '{filename}' not found.\")\n",
+    "    with open(filename, \"r\") as f:\n",
+    "        keys = json.load(f)\n",
+    "        P_ARRAY = keys[\"P_ARRAY\"]\n",
+    "        S_BOXES = keys[\"S_BOXES\"]\n",
     "\n",
     "def F(x):\n",
     "    a = (x >> 24) & 0xFF\n",
     "    b = (x >> 16) & 0xFF\n",
     "    c = (x >> 8) & 0xFF\n",
     "    d = x & 0xFF\n",
-    "    return ((S_BOXES[0][a] + S_BOXES[1][b]) ^ S_BOXES[2][c]) + S_BOXES[3][d]\n",
+    "    return (((S_BOXES[0][a] + S_BOXES[1][b]) & 0xFFFFFFFF) ^ S_BOXES[2][c] + S_BOXES[3][d]) & 0xFFFFFFFF\n",
     "\n",
     "def encrypt_block(L, R):\n",
     "    for i in range(16):\n",
-    "        L ^= P_ARRAY[i]\n",
-    "        R ^= F(L)\n",
+    "        L = (L ^ P_ARRAY[i]) & 0xFFFFFFFF\n",
+    "        R = (R ^ F(L)) & 0xFFFFFFFF\n",
     "        L, R = R, L\n",
     "    L, R = R, L\n",
-    "    R ^= P_ARRAY[16]\n",
-    "    L ^= P_ARRAY[17]\n",
+    "    R = (R ^ P_ARRAY[16]) & 0xFFFFFFFF\n",
+    "    L = (L ^ P_ARRAY[17]) & 0xFFFFFFFF\n",
     "    return L, R\n",
     "\n",
     "def decrypt_block(L, R):\n",
     "    for i in reversed(range(2, 18)):\n",
-    "        L ^= P_ARRAY[i]\n",
-    "        R ^= F(L)\n",
+    "        L = (L ^ P_ARRAY[i]) & 0xFFFFFFFF\n",
+    "        R = (R ^ F(L)) & 0xFFFFFFFF\n",
     "        L, R = R, L\n",
     "    L, R = R, L\n",
-    "    R ^= P_ARRAY[1]\n",
-    "    L ^= P_ARRAY[0]\n",
+    "    R = (R ^ P_ARRAY[1]) & 0xFFFFFFFF\n",
+    "    L = (L ^ P_ARRAY[0]) & 0xFFFFFFFF\n",
     "    return L, R"
    ]
   },
@@ -254,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +291,7 @@
      "output_type": "stream",
      "text": [
       "Plaintext: b'To jest tajna wiadomosc!'\n",
-      "Encrypted: b'\\xe0\\xd0|=pPI<\\xe4\\x83~|P^\\x000\\xea\\xd0k\\x11E[\\x06N\\x8d\\xab\\x00\\x7f,7a\\xe2'\n",
+      "Encrypted: b'\\xe4\\x8dV\\xc8R\\xf2\\xb09\\x04`\\xcf\\xe9\\xf0\\xcb\\xd6\\xd3\\x11\\xf0q\\xdav\\x83\\xf29\\xb31\\xf7e\\xc1\\x11\\xd1\\xdc'\n",
       "Decrypted: b'To jest tajna wiadomosc!'\n"
      ]
     }
@@ -273,15 +302,26 @@
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
     "\n",
     "from blowfish_pk.utils import encrypt_text, decrypt_text\n",
+    "from blowfish_pk.core import generate_keys, save_keys\n",
+    "# from blowfish_pk.core import load_keys\n",
     "\n",
-    "plaintext = b\"To jest tajna wiadomosc!\"\n",
-    "print(f\"Plaintext: {plaintext}\")\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Key generation & saving\n",
+    "    generate_keys()\n",
+    "    save_keys(\"keys_example.json\")\n",
+    "    \n",
+    "    # Loading keys\n",
+    "    # load_keys(\"keys_example.json\")\n",
+    "    \n",
+    "\t\t# Example usage\n",
+    "    plaintext = b\"To jest tajna wiadomosc!\"\n",
+    "    print(f\"Plaintext: {plaintext}\")\n",
     "\n",
-    "encrypted = encrypt_text(plaintext)\n",
-    "print(f\"Encrypted: {encrypted}\")\n",
+    "    encrypted = encrypt_text(plaintext)\n",
+    "    print(f\"Encrypted: {encrypted}\")\n",
     "\n",
-    "decrypted = decrypt_text(encrypted)\n",
-    "print(f\"Decrypted: {decrypted}\")"
+    "    decrypted = decrypt_text(encrypted)\n",
+    "    print(f\"Decrypted: {decrypted}\")"
    ]
   },
   {
